--- a/scss/components/tiles.scss
+++ b/scss/components/tiles.scss
@@ -71,6 +71,21 @@
   &.layout-tiles {
     .preview {
       padding: 0;
+
+      a {
+        display: block;
+        width: 100%;
+        height: 100%;
+        
+        img {
+          display: block;
+          transition: opacity 0.2s ease;
+        }
+
+        &:hover img {
+          opacity: 0.9;
+        }
+      }
     }
   }
 }
